--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="body">
                 <h1>Hello! I am Lenard Nase.</h1>
-                <h2>I am a Web Developer expert in HTML, CSS and Wordpress</h2>
+                <h2>Wordpress Developer and Web Designer</h2>
                 <a href="project.html">
                     <button>View all projects<img src="img/diagonalarrow.png"></button>
                 </a>
