--- a/project.html
+++ b/project.html
@@ -24,10 +24,43 @@
                             <div class="clweb">
                                 <p>Website. <a href="https://crishlashes.com/" target="_blank">( crishlashes.com ) </a></p>
                                 <div class="cllogo">
-                                <img src="img/cllogo.png"> 
+                                    <img src="img/cllogo.png"> 
                                 </div>
                             </div>
                             <div class="clsystem"><p>System</p></div>
+                        </div>
+                    </li>
+                    
+                    <li>Rockstar Mums
+                        <div class="project">
+                            <div class="clweb">
+                                <p>Website. <a href="https://rockstarmums.com/" target="_blank">( rockstarmums.com ) </a></p>
+                                <div class="cllogo">
+                                    <img src="img/rockstarmums-preview.png" alt="Rockstar Mums Preview">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>Hot Fry Media
+                        <div class="project">
+                            <div class="clweb">
+                                <p>Website. <a href="https://hotfrymedia.com/" target="_blank">( hotfrymedia.com ) </a></p>
+                                <div class="cllogo">
+                                    <img src="img/hotfrymedia-preview.png" alt="Hot Fry Media Preview">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>Nicole & Guy Wedding
+                        <div class="project">
+                            <div class="clweb">
+                                <p>Website. <a href="https://www.nicoleandguywedding.com/" target="_blank">( nicoleandguywedding.com ) </a></p>
+                                <div class="cllogo">
+                                    <img src="img/nicoleandguy-preview.png" alt="Nicole and Guy Wedding Preview">
+                                </div>
+                            </div>
                         </div>
                     </li>
                 </ul>
