--- a/project.html
+++ b/project.html
@@ -5,104 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenard Nase</title>
     <link rel="stylesheet" href="page.css">
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        .container {
-            padding: 20px;
-        }
-
-        .topnav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-            padding: 10px 0;
-        }
-
-        .main {
-            font-size: 24px;
-            font-weight: bold;
-            text-decoration: none;
-            color: black;
-        }
-
-        .links_1 a img,
-        .links_1 img {
-            width: 24px;
-            height: 24px;
-            margin-left: 10px;
-        }
-
-        .body h1 {
-            margin-top: 40px;
-            margin-bottom: 20px;
-            font-size: 32px;
-        }
-
-        .projects-grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 24px;
-        }
-
-        .project {
-            border: 1px solid #ddd;
-            padding: 16px;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-            transition: transform 0.2s;
-        }
-
-        .project:hover {
-            transform: translateY(-4px);
-        }
-
-        .project img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 6px;
-            margin-top: 12px;
-        }
-
-        .project p {
-            margin: 0;
-            font-weight: bold;
-        }
-
-        /* Desktop view: 2 columns */
-        @media (min-width: 768px) {
-            .projects-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        /* Mobile responsiveness for heading */
-        @media (max-width: 600px) {
-            .body h1 {
-                font-size: 24px;
-            }
-
-            .topnav {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .links_1 {
-                margin-top: 10px;
-            }
-        }
-    </style>
 </head>
 <body>
     <div class="container">           
         <div class="topnav">
-            <a href="index.html" class="main">Lenard Nase</a>
+            <a href="index.html" class="main">Home</a>
             <div class="links_1">
                 <a href="https://www.facebook.com/lessssannn" target="_blank"><img src="img/facebook.png" class="fb"></a>
                 <a href="https://www.instagram.com/lessssannn/" target="_blank"><img src="img/instagram.png" class="ig"></a>
