--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
     <link rel="icon" href="img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenard Nase</title>
+    <link rel="stylesheet" href="page.css">
     <style>
         body {
             margin: 0;
