--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
             font-size: 24px;
             font-weight: bold;
             text-decoration: none;
-            color: black;
+            color: white;
         }
 
         .links_1 a img,
