--- a/project.html
+++ b/project.html
@@ -100,7 +100,7 @@
 <body>
     <div class="container">           
         <div class="topnav">
-            <a href="index.html" class="main">Home</a>
+            <a href="index.html" class="main">Lenard Nase</a>
             <div class="links_1">
                 <a href="https://www.facebook.com/lessssannn" target="_blank"><img src="img/facebook.png" class="fb"></a>
                 <a href="https://www.instagram.com/lessssannn/" target="_blank"><img src="img/instagram.png" class="ig"></a>
