--- a/project.html
+++ b/project.html
@@ -4,10 +4,10 @@
     <link rel="icon" href="img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenard Nase</title>
-    <link rel="stylesheet" href="page.css">
     <style>
         body {
             margin: 0;
+            font-family: Arial, sans-serif;
         }
 
         .container {
@@ -16,9 +16,9 @@
 
         .topnav {
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
             align-items: center;
-            flex-wrap: wrap;
+            gap: 10px;
             padding: 10px 0;
         }
 
@@ -29,17 +29,24 @@
             color: white;
         }
 
+        .links_1 {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
         .links_1 a img,
         .links_1 img {
             width: 24px;
             height: 24px;
-            margin-left: 10px;
         }
 
         .body h1 {
             margin-top: 40px;
             margin-bottom: 20px;
             font-size: 32px;
+            text-align: center;
         }
 
         .projects-grid {
@@ -52,6 +59,7 @@
             border: 1px solid #ddd;
             padding: 16px;
             border-radius: 8px;
+            background-color: #f9f9f9;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
             transition: transform 0.2s;
@@ -78,21 +86,26 @@
             .projects-grid {
                 grid-template-columns: repeat(2, 1fr);
             }
-        }
-
-        /* Mobile responsiveness */
-        @media (max-width: 600px) {
-            .body h1 {
-                font-size: 24px;
-            }
 
             .topnav {
-                flex-direction: column;
-                align-items: flex-start;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+            .main {
+                margin-right: auto;
             }
 
             .links_1 {
-                margin-top: 10px;
+                justify-content: flex-end;
+            }
+        }
+
+        /* Mobile adjustments */
+        @media (max-width: 600px) {
+            .body h1 {
+                font-size: 24px;
             }
         }
     </style>
@@ -102,11 +115,12 @@
         <div class="topnav">
             <a href="index.html" class="main">Lenard Nase</a>
             <div class="links_1">
-                <a href="https://www.facebook.com/lessssannn" target="_blank"><img src="img/facebook.png" class="fb"></a>
-                <a href="https://www.instagram.com/lessssannn/" target="_blank"><img src="img/instagram.png" class="ig"></a>
-                <img src="img/linkedin.png" class="linkedin">
+                <a href="https://www.facebook.com/lessssannn" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/lessssannn/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
+                <img src="img/linkedin.png" alt="LinkedIn">
             </div>
         </div>
+
         <div class="body">
             <h1>Projects</h1>
             <div class="projects-grid">
